# dyns

./: Cargo.toml  PKGBUILD  README.md  dyns.service  pkg.toml  shell.nix
src/: main.rs
