[package]
name = "dyns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.7", features = ["derive"] }
isahc = { version = "1.7.2", features = ["json"] }
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
simplelog = "0.12.0"
toml = "0.5.9"

